data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1845.wast
;; 6. **Loop Branch Target**:    - Include a `loop` block within a regular block, and use a `br` instruction to target the loop's label from inside the regular block. Ensure execution resumes correctly at the loop.    - **Constraint**: Loop labels should be correctly indexed and resolved from within another block.    - **Focus**: Ensures branching into a loop block is correctly handled.

(assert_invalid
  (module
    (func $loop-branch-target
      (block 
        (loop $L (br $L))
      )
    )
  )
  "type mismatch"
)